Add smily face to already red articles

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aboutnews",
-  "title": "aboutnews",
+  "name": "pfeed-aboutnews",
+  "title": "pfeed-aboutnews",
   "id": "jid1-FnCaMoUjaRVBRQ",
   "description": "a basic add-on",
   "author": "",
